crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_model__v_model_radio.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<input type=\"radio\" v-model=\"picked\" value=\"a\">\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><input type="radio"${(_ssrIncludeBooleanAttr(_ssrLooseEqual(_ctx.picked, a))) ? " checked" : ""} value="a"></div>`)
}
